perf: optimize exclusion checking and utilize file.length() to achieve 1.8x speedup